color scheme added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     
     <div class="wrapper">
-      <div class="container d-flex m-auto border conatiner-main" >
+      <div class="container p-0 d-flex m-auto border container-main" >
         <div class="pt-4 pb-0 instructions my-auto"><h4>Instructions</h4></div>
         <div class="instruction-content py-4 px-3 d-flex">
           <div class="m-auto">
